app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: podinfod
          image: stefanprodan/podinfo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9898
              protocol: TCP
          command:
            - ./podinfo
            - --port=9898
            - --ui-message="Hi, from App1"
---
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  type: ClusterIP
  ports:
  - port: 9898
  selector:
    app: app1
